[package]
name = "walrus_store"
version = "0.2.1"
edition = "2024"

[dependencies]
iced = { version = "0.12", features = ["image", "svg", "canvas", "debug", "tokio", "system"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rfd = "0.12" # For file dialogs
async-std = "1.12" # For async operations, alternative to tokio
directories = "5.0" # For application data directory
chrono = { version = "0.4", features = ["serde"] } # For timestamps
walrus_rs = "0.1.2"
tokio = "1.47.1"
arboard = "3.2" # For clipboard operations
image = "0.25.8"
